--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!doctype html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nicolas Girardot - Développeur Back-end & Architecte Logiciel</title>
-    <meta name="description" content="Portfolio de Nicolas Girardot, étudiant en BUT Informatique spécialisé en Java, Sécurité et Architecture. Recherche stage Avril 2026." />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Nicolas Girardot - Développeur Back-end</title>
+  <meta name="description"
+    content="Portfolio de Nicolas Girardot, étudiant en BUT Informatique spécialisé en Java, Sécurité et Architecture. Recherche stage Avril 2026." />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
